--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -49,11 +49,10 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: Connecting Drug- and Age-related Gene Expression Signatures</h1>
-<h3 class="subtitle"><em>…</em></h3>
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
 <h4 class="date"><em>Last update: 20 January, 2016</em></h4>
 </div>
-<h4 class="package">Package version: <span style="font-weight: normal">ChemmineR 2.22.0</span></h4>
+<h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.0</span></h4>
 
 <h1>Contents</h1>
 <div id="TOC">
