--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -48,9 +48,11 @@ document.addEventListener("DOMContentLoaded", function() {
 
 
 <div id="header">
-<h1 class="title"><a href="http://www.longevitygenomics.org/projects/"><em>longevityTools</em></a>: Connecting Drug- and Age-related Gene Expression Signatures</h1>
+<h1 class="title"><em>longevityTools</em>: Connecting Drug- and Age-related Gene Expression Signatures</h1>
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
 <h4 class="date"><em>Last update: 20 January, 2016</em></h4>
+<h4 class="abstract">Abstract</h4>
+<p>This vigentte is part of the Longevity Genomics project. For details see <a href="http://www.longevitygenomics.org/projects/">here</a>.</p>
 </div>
 <h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.0</span></h4>
 
