--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -52,7 +52,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
 <h4 class="date"><em>Last update: 20 January, 2016</em></h4>
 <h4 class="abstract">Abstract</h4>
-<p>This vigentte is part of the Longevity Genomics project. For details see <a href="http://www.longevitygenomics.org/projects/">here</a>.</p>
+<p>This vignette is part of the Longevity Genomics project. For details see <a href="http://www.longevitygenomics.org/projects/">here</a>.</p>
 </div>
 <h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.0</span></h4>
 
