--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -52,7 +52,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
 <h4 class="date"><em>Last update: 20 January, 2016</em></h4>
 <h4 class="abstract">Abstract</h4>
-<p>This vignette is part of the Longevity Genomics project. For more information on ths project please visit its website <a href="http://www.longevitygenomics.org/projects/">here</a>. The GitHub repository of the corresponding R package is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">here</a>.</p>
+<p>This vignette is part of the NIA funded Longevity Genomics project. For more information on ths project please visit its website <a href="http://www.longevitygenomics.org/projects/">here</a>. The GitHub repository of the corresponding R package is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">here</a>.</p>
 </div>
 <h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.0</span></h4>
 
