--- a/vignettes/longevityTools.html
+++ b/vignettes/longevityTools.html
@@ -103,10 +103,10 @@ document.addEventListener("DOMContentLoaded", function() {
 
 
 
-<p>Note: the GitHub repository of this package is <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">here</a>.</p>
 <div id="introduction" class="section level1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
-<p>This vignette provides general information about the <code>longevityTools</code> package. This includes an introduction into the objects, data structures, methods and functions defined by <code>longevityTools</code>. The development of <code>longevityTools</code> is part of the <a href="http://www.longevitygenomics.org/">Longevity Genomics</a> project. The analysis workflows used by this project are documented in its companion vignettes listed below.</p>
+<p>This vignette is part of the NIA funded Longevity Genomics project. For more information on ths project please visit its website <a href="http://www.longevitygenomics.org/projects/">here</a>. The GitHub repository of the corresponding R package is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">here</a>.</p>
+<p>This overview vignette provides general information about the <code>longevityTools</code> package. This includes an introduction into the objects, data structures, methods and functions defined by <code>longevityTools</code>. The development of <code>longevityTools</code> is part of the <a href="http://www.longevitygenomics.org/">Longevity Genomics</a> project. The analysis workflows used by this project are documented in its companion vignettes listed below.</p>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
