--- a/vignettes/longevityTools_eQTL.html
+++ b/vignettes/longevityTools_eQTL.html
@@ -50,8 +50,9 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: eQTL, eSNP and GWAS Analysis</h1>
 <h4 class="author"><em>Authors: Danjuma Quarless, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 18 January, 2016</em></h4>
+<h4 class="date"><em>Last update: 20 January, 2016</em></h4>
 </div>
+<h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.0</span></h4>
 
 <h1>Contents</h1>
 <div id="TOC">
@@ -103,9 +104,9 @@ document.addEventListener("DOMContentLoaded", function() {
 
 
 
-<p>Note: the GitHub repository of this package is <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">here</a>.</p>
 <div id="introduction" class="section level1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
+<p>This vignette is part of the NIA funded Longevity Genomics project. For more information on ths project please visit its website <a href="http://www.longevitygenomics.org/projects/">here</a>. The GitHub repository of the corresponding R package is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this vignette can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">here</a>.</p>
 <p>text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text text some citation <span class="citation">(Lamb et al. 2006; M. J. Peters et al. 2015; Sood et al. 2015)</span>.</p>
 <div align="right">
 <a href>Back to Table of Contents</a>
