--- a/vignettes/longevityTools.html
+++ b/vignettes/longevityTools.html
@@ -50,9 +50,9 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: Analysis Tools for Longevity Research</h1>
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 20 January, 2016</em></h4>
+<h4 class="date"><em>Last update: 21 January, 2016</em></h4>
 </div>
-<h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.0</span></h4>
+<h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.1</span></h4>
 
 <h1>Contents</h1>
 <div id="TOC">
@@ -118,7 +118,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <h2><span class="header-section-number">2.1</span> Installation</h2>
 <p>The R software for running <a href="https://github.com/tgirke/longevityTools"><em><code>longevityTools</code></em></a> can be downloaded from <a href="http://cran.at.r-project.org/"><em>CRAN</em></a>. The <em><code>longevityTools</code></em> package can be installed from the R console using the following <em><code>biocLite</code></em> install command.</p>
 <pre class="r"><code>source(&quot;http://bioconductor.org/biocLite.R&quot;) # Sources the biocLite.R installation script 
-biocLite(&quot;tgirke/longevityTools&quot;, build_vignettes=TRUE, dependencies=TRUE) # Installs package from GitHub</code></pre>
+biocLite(&quot;tgirke/longevityTools&quot;, build_vignettes=FALSE) # Installs package from GitHub</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
