--- a/vignettes/longevityTools_CMAP.html
+++ b/vignettes/longevityTools_CMAP.html
@@ -158,7 +158,7 @@ vignette(topic=&quot;longevityTools_CMAP&quot;, package=&quot;longevityTools&quo
 <div id="import-custom-functions" class="section level1">
 <h1><span class="header-section-number">3</span> Import custom functions</h1>
 <p>Preliminary functions that are still under developement, or not fully tested and documented can be imported with the <code>source</code> command from the <code>inst/extdata</code> directory of the package.</p>
-<pre class="r"><code>fctpath &lt;- system.file(&quot;extdata&quot;, &quot;analysis_Fct.R&quot;, package=&quot;longevityTools&quot;)
+<pre class="r"><code>fctpath &lt;- system.file(&quot;extdata&quot;, &quot;longevityTools_CMAP_Fct.R&quot;, package=&quot;longevityTools&quot;)
 source(fctpath)</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
