--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: Connecting Drug- and Age-related Gene Expression Signatures</h1>
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 21 January, 2016</em></h4>
+<h4 class="date"><em>Last update: 24 January, 2016</em></h4>
 </div>
 <h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.1</span></h4>
 
@@ -101,7 +101,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <!---
 - Compile from command-line
-echo "rmarkdown::render('longevityTools_CMAP.Rmd')" | R -slave; R CMD Stangle longevityTools_CMAP.Rmd
+echo "rmarkdown::render('longevityTools_eDRUG.Rmd')" | R -slave; R CMD Stangle longevityTools_eDRUG.Rmd
 
 - Commit to github
 git commit -am "some edits"; git push -u origin master
@@ -128,7 +128,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <div id="introduction" class="section level1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
-<p>This vignette is part of the NIA funded Longevity Genomics project. For more information on ths project please visit its website <a href="http://www.longevitygenomics.org/projects/">here</a>. The GitHub repository of the corresponding R package is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this vignette can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">here</a>.</p>
+<p>This vignette is part of the NIA funded Longevity Genomics project. For more information on ths project please visit its website <a href="http://www.longevitygenomics.org/projects/">here</a>. The GitHub repository of the corresponding R package is available <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this vignette can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eDRUG.html">here</a>.</p>
 <p>The project component covered by this vignette analyzes drug- and age-related genome-wide expression data from public microarray and RNA-Seq experiments. One of the main objective is the identification drug candidates modulating the expression of longevity genes and pathways. For this, we compare age-related expression signatures with those from drug treamtments. The age-related query signatures are from recent publications such as Peters et al. <span class="citation">(2015)</span> and Sood et al. <span class="citation">(2015)</span>, while the drug-related reference signatures are from the Connectivity Map (CMAP) and LINCS projects <span class="citation">(Lamb et al. 2006)</span>.</p>
 <div align="right">
 <a href>Back to Table of Contents</a>
@@ -149,7 +149,7 @@ biocLite(&quot;tgirke/longevityTools&quot;, build_vignettes=FALSE) # Installs pa
 <h2><span class="header-section-number">2.2</span> Loading package and documentation</h2>
 <pre class="r"><code>library(&quot;longevityTools&quot;) # Loads the package
 library(help=&quot;longevityTools&quot;) # Lists package info
-vignette(topic=&quot;longevityTools_CMAP&quot;, package=&quot;longevityTools&quot;) # Opens vignette</code></pre>
+vignette(topic=&quot;longevityTools_eDRUG&quot;, package=&quot;longevityTools&quot;) # Opens vignette</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
@@ -158,7 +158,7 @@ vignette(topic=&quot;longevityTools_CMAP&quot;, package=&quot;longevityTools&quo
 <div id="import-custom-functions" class="section level1">
 <h1><span class="header-section-number">3</span> Import custom functions</h1>
 <p>Preliminary functions that are still under developement, or not fully tested and documented can be imported with the <code>source</code> command from the <code>inst/extdata</code> directory of the package.</p>
-<pre class="r"><code>fctpath &lt;- system.file(&quot;extdata&quot;, &quot;longevityTools_CMAP_Fct.R&quot;, package=&quot;longevityTools&quot;)
+<pre class="r"><code>fctpath &lt;- system.file(&quot;extdata&quot;, &quot;longevityTools_eDRUG_Fct.R&quot;, package=&quot;longevityTools&quot;)
 source(fctpath)</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
@@ -344,8 +344,10 @@ length(q)</code></pre>
 <div id="query-drug-signatures" class="section level2">
 <h2><span class="header-section-number">7.1</span> Query drug signatures</h2>
 <p>The following uses the 1,497 age-related gene expression signatures from Peters et al. <span class="citation">(2015)</span> as a query against the CMAP signatures. The results are sorted by the ES Distance and the top scoring 20 drugs are given below. The full result table is<br />written to a file named <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/drugcmap2.xls"><code>drugcmap2.xls</code></a>.</p>
-<pre class="r"><code>library(DrugVsDisease)
-PMID26490707 &lt;- read.delim(&quot;./data/PMID26490707_S1.xls&quot;, comment=&quot;#&quot;, check.names=FALSE)
+<pre class="r"><code>library(DrugVsDisease)</code></pre>
+<pre><code>## Warning: replacing previous import by 'grid::arrow' when loading 'qvalue'</code></pre>
+<pre><code>## Warning: replacing previous import by 'grid::unit' when loading 'qvalue'</code></pre>
+<pre class="r"><code>PMID26490707 &lt;- read.delim(&quot;./data/PMID26490707_S1.xls&quot;, comment=&quot;#&quot;, check.names=FALSE)
 data(drugRL)
 PMID26490707sub &lt;- PMID26490707[PMID26490707[,&quot;NEW-Gene-ID&quot;] %in% rownames(drugRL),]
 testprofiles &lt;- list(ranklist=matrix(PMID26490707sub$Zscore, dimnames=list(PMID26490707sub[,&quot;NEW-Gene-ID&quot;])), 
@@ -460,7 +462,7 @@ diseasecmap2[[1]][1:20,]</code></pre>
 ##  [1] DrugVsDisease_2.9.0     qvalue_2.2.0            cMap2data_1.6.0         DrugVsDiseasedata_1.6.0
 ##  [5] GEOquery_2.36.0         ArrayExpress_1.30.1     biomaRt_2.26.1          limma_3.26.3           
 ##  [9] affy_1.48.0             Biobase_2.30.0          BiocGenerics_0.16.1     ggplot2_2.0.0          
-## [13] longevityTools_1.0.0    BiocStyle_1.8.0        
+## [13] longevityTools_1.0.1    BiocStyle_1.8.0        
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] Rcpp_0.12.3                XVector_0.10.0             GenomeInfoDb_1.6.1        
