--- a/vignettes/longevityTools.html
+++ b/vignettes/longevityTools.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: Analysis Tools for Longevity Research</h1>
 <h4 class="author"><em>Authors: Thomas Girke, Danjuma Quarless, Tyler Backman, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 21 January, 2016</em></h4>
+<h4 class="date"><em>Last update: 24 January, 2016</em></h4>
 </div>
 <h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.1</span></h4>
 
@@ -146,7 +146,7 @@ vignette(&quot;longevityTools&quot;) # Opens vignette</code></pre>
 <ul>
 <li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">longevityTools</a>: overview vignette</li>
 <li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html">longevityTools_eQTL</a>: eQTL, eSNP and GWAS analysis</li>
-<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html">longevityTools_CMAP</a>: connecting drug- and age-related gene expression signatures</li>
+<li><a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eDRUG.html">longevityTools_eDRUG</a>: connecting drug- and age-related gene expression signatures</li>
 <li>longevityTools_Drugs: coming soon</li>
 </ul>
 <div align="right">
