--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -63,7 +63,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <li><a href="#loading-package-and-documentation"><span class="toc-section-number">2.2</span> Loading package and documentation</a></li>
 </ul></li>
 <li><a href="#import-custom-functions"><span class="toc-section-number">3</span> Import custom functions</a></li>
-<li><a href="#create-analysis-environment"><span class="toc-section-number">4</span> Create analysis environment</a></li>
+<li><a href="#create-work-environment"><span class="toc-section-number">4</span> Create work environment</a></li>
 <li><a href="#data-downloads"><span class="toc-section-number">5</span> Data downloads</a><ul>
 <li><a href="#download-data-from-connectivity-map-project-site"><span class="toc-section-number">5.1</span> Download data from Connectivity Map project site</a></li>
 </ul></li>
@@ -166,8 +166,8 @@ source(fctpath)</code></pre>
 <a href>Back to Table of Contents</a>
 </div>
 </div>
-<div id="create-analysis-environment" class="section level1">
-<h1><span class="header-section-number">4</span> Create analysis environment</h1>
+<div id="create-work-environment" class="section level1">
+<h1><span class="header-section-number">4</span> Create work environment</h1>
 <p>The following creates the directory structure expected by this workflow. Input data will be stored in the <code>data</code> directory and results will written to the <code>results</code> directory. All paths are given relative to the present working directory of the user’s R session.</p>
 <pre class="r"><code>dir.create(&quot;data&quot;); dir.create(&quot;data/CEL&quot;); dir.create(&quot;results&quot;) </code></pre>
 </div>
