--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -62,7 +62,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <li><a href="#installation"><span class="toc-section-number">2.1</span> Installation</a></li>
 <li><a href="#loading-package-and-documentation"><span class="toc-section-number">2.2</span> Loading package and documentation</a></li>
 </ul></li>
-<li><a href="#setup-working-environment"><span class="toc-section-number">3</span> Setup working environment</a><ul>
+<li><a href="#setup-of-working-environment"><span class="toc-section-number">3</span> Setup of working environment</a><ul>
 <li><a href="#import-custom-functions"><span class="toc-section-number">3.1</span> Import custom functions</a></li>
 <li><a href="#create-expected-directory-structure"><span class="toc-section-number">3.2</span> Create expected directory structure</a></li>
 </ul></li>
@@ -159,8 +159,8 @@ vignette(topic=&quot;longevityTools_eDRUG&quot;, package=&quot;longevityTools&qu
 </div>
 </div>
 </div>
-<div id="setup-working-environment" class="section level1">
-<h1><span class="header-section-number">3</span> Setup working environment</h1>
+<div id="setup-of-working-environment" class="section level1">
+<h1><span class="header-section-number">3</span> Setup of working environment</h1>
 <div id="import-custom-functions" class="section level2">
 <h2><span class="header-section-number">3.1</span> Import custom functions</h2>
 <p>Preliminary functions that are still under developement, or not fully tested and documented can be imported with the <code>source</code> command from the <code>inst/extdata</code> directory of the package.</p>
