--- a/vignettes/longevityTools_eQTL.html
+++ b/vignettes/longevityTools_eQTL.html
@@ -167,7 +167,7 @@ source(fctpath)</code></pre>
 <div id="create-expected-directory-structure" class="section level2">
 <h2><span class="header-section-number">4.2</span> Create expected directory structure</h2>
 <p>The following creates the directory structure expected by this workflow. Input data will be stored in the <code>data</code> directory and results will written to the <code>results</code> directory. All paths are given relative to the present working directory of the user’s R session.</p>
-<pre class="r"><code>dir.create(&quot;data&quot;); dir.create(&quot;data/CEL&quot;); dir.create(&quot;results&quot;) </code></pre>
+<pre class="r"><code>dir.create(&quot;data&quot;); dir.create(&quot;results&quot;) </code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
