--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -78,7 +78,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <li><a href="#deg-analysis-with-limma"><span class="toc-section-number">6</span> DEG analysis with <code>limma</code></a><ul>
 <li><a href="#generate-list-of-cel-names-defining-treatment-vs.control-comparisons"><span class="toc-section-number">6.1</span> Generate list of CEL names defining treatment vs. control comparisons</a></li>
 <li><a href="#load-normalized-expression-data"><span class="toc-section-number">6.2</span> Load normalized expression data</a></li>
-<li><a href="#deg-analysis-with-limma-1"><span class="toc-section-number">6.3</span> DEG analysis with Limma</a></li>
+<li><a href="#deg-analysis-with-limma-1"><span class="toc-section-number">6.3</span> DEG analysis with <code>limma</code></a></li>
 <li><a href="#obtain-annotation-information"><span class="toc-section-number">6.4</span> Obtain annotation information</a></li>
 <li><a href="#identify-deg-overlaps-with-peters-et-al.--peters2015-fc"><span class="toc-section-number">6.5</span> Identify DEG overlaps with Peters et al. <span class="citation">(2015)</span></a></li>
 <li><a href="#identify-deg-overlaps-with-sood-et-al.--sood2015-pb"><span class="toc-section-number">6.6</span> Identify DEG overlaps with Sood et al. <span class="citation">(2015)</span></a></li>
@@ -253,9 +253,12 @@ df2 &lt;- readRDS(paste0(&quot;data/&quot;, chiptype_dir[2], &quot;/&quot;, &quo
 df3 &lt;- readRDS(paste0(&quot;data/&quot;, chiptype_dir[3], &quot;/&quot;, &quot;all_mas5exprs.rds&quot;))
 affyid &lt;- rownames(df1)[rownames(df1) %in% rownames(df2)]; affyid &lt;- affyid[affyid %in% rownames(df3)]
 df &lt;- cbind(df1[affyid,], df2[affyid,], df3[affyid,])</code></pre>
+<div align="right">
+<a href>Back to Table of Contents</a>
+</div>
 </div>
 <div id="deg-analysis-with-limma-1" class="section level2">
-<h2><span class="header-section-number">6.3</span> DEG analysis with Limma</h2>
+<h2><span class="header-section-number">6.3</span> DEG analysis with <code>limma</code></h2>
 <p>The analysis of differentially expressed genes (DEGs) is performed with the <code>limma</code> package. Genes meeting the chosen cutoff criteria are reported as DEGs (below set to FDR of 10% and a minimum fold change of 2). The DEG matrix is written to a file named <a href="http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degMA.xls"><code>degMA.xls</code></a>.</p>
 <pre class="r"><code>degMA &lt;- runLimma(df, comp_list, fdr=0.10, foldchange=1, verbose=TRUE)
 write.table(degMA, file=&quot;./results/degMA.xls&quot;, quote=FALSE, sep=&quot;\t&quot;, col.names = NA) 
@@ -296,28 +299,30 @@ j &lt;- c/(c+a+b) # Jaccard similarity
 r &lt;- sort(j, decreasing=TRUE)
 degOL_PMID26490707 &lt;- data.frame(CMP=names(r), Jaccard_Index=as.numeric(r))
 write.table(degOL_PMID26490707, file=&quot;./results/degOL_PMID26490707.xls&quot;, quote=FALSE, sep=&quot;\t&quot;, col.names = NA) 
-degOL_PMID26490707[1:20,]</code></pre>
+sum(degOL_PMID26490707[,2] &gt; 0) # Drugs with any overlap</code></pre>
+<pre><code>## [1] 880</code></pre>
+<pre class="r"><code>degOL_PMID26490707[1:20,] # Top 20 scoring drugs</code></pre>
 <pre><code>##                            CMP Jaccard_Index
 ## 1              anisomycin_HL60    0.10581448
-## 2               pergolide_HL60    0.10348299
-## 3             alprostadil_HL60    0.10213891
-## 4                lycorine_HL60    0.10194778
-## 5            tanespimycin_HL60    0.09935438
-## 6                 emetine_HL60    0.09638932
-## 7              vorinostat_HL60    0.09631122
-## 8           trichostatin A_PC3    0.09492953
-## 9             mebendazole_HL60    0.09412955
-## 10       (-)-isoprenaline_HL60    0.09163464
-## 11             vorinostat_MCF7    0.09122108
-## 12 co-dergocrine mesilate_HL60    0.09107612
-## 13            midecamycin_HL60    0.09038592
-## 14           tanespimycin_MCF7    0.09027778
-## 15             cephaeline_MCF7    0.08966813
-## 16           8-azaguanine_HL60    0.08924279
-## 17          Prestwick-983_HL60    0.08851541
-## 18               baclofen_HL60    0.08798351
-## 19           camptothecin_MCF7    0.08797251
-## 20          helveticoside_HL60    0.08634280</code></pre>
+## 2          trichostatin A_HL60    0.10353716
+## 3               pergolide_HL60    0.10348299
+## 4             alprostadil_HL60    0.10213891
+## 5                lycorine_HL60    0.10194778
+## 6            tanespimycin_HL60    0.09935438
+## 7                 emetine_HL60    0.09638932
+## 8              vorinostat_HL60    0.09631122
+## 9           trichostatin A_PC3    0.09492953
+## 10            mebendazole_HL60    0.09412955
+## 11         trichostatin A_MCF7    0.09363618
+## 12       (-)-isoprenaline_HL60    0.09163464
+## 13             vorinostat_MCF7    0.09122108
+## 14 co-dergocrine mesilate_HL60    0.09107612
+## 15            midecamycin_HL60    0.09038592
+## 16           tanespimycin_MCF7    0.09027778
+## 17             cephaeline_MCF7    0.08966813
+## 18           8-azaguanine_HL60    0.08924279
+## 19          Prestwick-983_HL60    0.08851541
+## 20             cephaeline_HL60    0.08821908</code></pre>
 </div>
 <div id="identify-deg-overlaps-with-sood-et-al.--sood2015-pb" class="section level2">
 <h2><span class="header-section-number">6.6</span> Identify DEG overlaps with Sood et al. <span class="citation">(2015)</span></h2>
